--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-kakao-maps-sdk": "^1.1.27",
     "validator": "^13.12.0",
     "zod": "^3.24.2"
   },
