--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-kakao-maps-sdk": "^1.1.27",
     "validator": "^13.12.0",
     "zod": "^3.24.2"
   },
@@ -27,6 +26,7 @@
     "@types/validator": "^13.12.2",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "kakao.maps.d.ts": "^0.1.40",
     "tailwindcss": "^4.0.12",
     "typescript": "^5"
   }
